[package]
name = "elster_ident"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6"
structopt = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
hyper = { version = "1.1", features = ["client", "http1"]}
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "macros", "net", "io-std", "io-util"] }
serde_json = "1.0.107"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.4" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", features = ["tracing"], tag = "v0.1.0-alpha.4" }
notary-server = {  git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.4" }


[[bin]]
name = "prover"
path = "src/bin/prover.rs"

[[bin]]
name = "notary"
path = "src/bin/notary.rs"

